--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -71,7 +71,7 @@
 }
 
 .contenido_footer{
-    background-color: #fbd421;
+    background-image :linear-gradient(to bottom, #fbd248, #fbd248,#353c17) ;
     display: grid;
     grid-template-columns: 2fr 2fr 1fr;
     column-gap: 10px;
