--- a/scss/_tarjetas.scss
+++ b/scss/_tarjetas.scss
@@ -1,11 +1,7 @@
 
 .tarjetas{
     border: $bordes;
-    border-radius: 5px;
-    width: 300px;
-    margin: 5px;
-    padding: 5px;
-    transition: 1s;
+    @include base(#fbd248);
     &:hover{
         background-color: #353c17;
         color: #fff;
@@ -40,11 +36,8 @@
 
 
 .tarjetas_2{
-    width: 300px;
     border: $bordes;
-    border-radius: 5px;
-    margin: 5px;
-    transition: 1s;
+    @extend %base;
     &:hover{
         background-color: #353c17;
         color: #fff;
