--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,8 @@
 
 @import "reset";
 @import "variables";
+@import "extends";
+@import "mixins";
 @import "navegador";
 @import "carrousel";
 @import "tarjetas";
